plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.powerup'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.15.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.12.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

jacoco {
    toolVersion = "0.8.7"
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    dependsOn test

    reports {
        html.required = true
        xml.required = true
        csv.required = true
    }

    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, exclude: [
                'com/powerup/propertymicroservice/PropertymicroserviceApplication.class',
                'com/powerup/propertymicroservice/config/**',
                'com/powerup/propertymicroservice/infrastructure/entrypoint/**',
                'com/powerup/propertymicroservice/infrastructure/output/jpa/entity/**',
                'com/powerup/propertymicroservice/infrastructure/output/jpa/adapter/**',
                'com/powerup/propertymicroservice/infrastructure/output/jpa/mapper/**',
                'com/powerup/propertymicroservice/domain/utils/factories/**',
                'com/powerup/propertymicroservice/domain/utils/pagination/**',
                'com/powerup/propertymicroservice/domain/utils/validations/**',
                '**/*Test.*',
                '**/*Kt.*'
        ])
    }))

    sourceDirectories.setFrom(files('src/main/java'))
    executionData.setFrom(fileTree(dir: project.buildDir, includes: ['jacoco/test.exec']))
}